# llm-quiz

./: GITHUB_CLASSROOM_DEPLOYMENT.md  README.md  config.toml  pyproject.toml  quiz.toml  requirements.txt  test_similarity_quiz.toml
.github/workflows/: README.md  ci.yml  classroom.yml  demo.yml  format.yml
llm_quiz/: __init__.py  __main__.py  cli.py  dspy_core.py  dspy_signatures.py  requirements.txt  test_dspy.py  test_quiz.toml
